# claude-tmux

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
docs/: git-worktree-design.md
src/: app.rs  completion.rs  detection.rs  git.rs  input.rs  main.rs  scroll_state.rs  session.rs  tmux.rs  ui.rs
src/app/: mod.rs  mode.rs
src/git/: worktree.rs
src/ui/: dialogs.rs  mod.rs
