[package]
name = "claude-tmux"
version = "0.1.0"
edition = "2021"
description = "TUI for managing Claude Code tmux sessions"
license = "AGPL-3.0-only"
authors = ["Niels Groeneveld"]
repository = "https://github.com/nielsgroen/claude-tmux"
homepage = "https://github.com/nielsgroen/claude-tmux"
readme = "README.md"
keywords = ["tmux", "cli", "tui", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", "docs/", ".github/"]
